--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MovieApp">
-        <activity android:name=".EditMovie"></activity>
+        <activity android:name=".Default"></activity>
+        <activity android:name=".EditMovie" />
         <activity android:name=".AddMovie" />
         <activity android:name=".MainActivity">
             <intent-filter>
